err/beatboxxx.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beatbox'...
Compiling './lib/python3.5/site-packages/beatbox/_beatbox.py'...
***   File "./lib/python3.5/site-packages/beatbox/_beatbox.py", line 321
    raise RuntimeError, 'No response from Salesforce'
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/beatbox/python_client.py'...
***   File "./lib/python3.5/site-packages/beatbox/python_client.py", line 46
    except AttributeError, n:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/beatbox/xmltramp.py'...
***   File "./lib/python3.5/site-packages/beatbox/xmltramp.py", line 90
    raise TypeError, "I wasn't expecting "+`x`+"."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/beatboxxx-21.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
